Update cors, some fixes in Swagger docs
